# litterbox

./: .gitattributes  .gitignore  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  conversion_obj_step.go  conversion_obj_step.py  conversion_obj_stl.py  go.mod  go.sum  justfile  package.json  pyproject.toml  requirements.txt  source.stl
.github/: dependabot.yml
.github/workflows/: add-issues-to-project.yml  black.yml  build-test.yml  go-format.yml  mypy.yml  python-format.yml  ruff.yml
conversion_obj_stl/: conversion_obj_stl.json
samples/convert_file/: convert_diff_files.js  convert_file.go  convert_file.js  convert_file.json  convert_file.py  output.stl
samples/file_center_of_mass/: file_center_of_mass.go  file_center_of_mass.js  file_center_of_mass.json  file_center_of_mass.py  output.json
samples/file_density/: file_density.go  file_density.js  file_density.json  file_density.py  output.json
samples/file_mass/: file_mass.go  file_mass.js  file_mass.json  file_mass.py  output.json
samples/file_surface_area/: file_surface_area.go  file_surface_area.js  file_surface_area.json  file_surface_area.py  output.json
samples/file_volume/: file_volume.go  file_volume.js  file_volume.json  file_volume.py  output.json
tutorials/beginner_tutorial/: convert.js  convert.py
tutorials/conversion_obj_step/: conversion_obj_step  conversion_obj_step.go  conversion_obj_step.json  conversion_obj_step.py  output.step
tutorials/conversion_obj_stl/: conversion_obj_stl.go  conversion_obj_stl.json  conversion_obj_stl.py  output.stl
tutorials/get_mass/: get_mass.go  get_mass.json  get_mass.py  output.json
tutorials/get_mass_volume/: get_mass_volume.go  get_mass_volume.json  get_mass_volume.py  output.json
tutorials/get_volume/: get_volume.go  get_volume.json  get_volume.py  output.json
tutorials/getting_started/: getting_started.json  getting_started.py
tutorials/import_file/: import_model.py
tutorials/modeling_websocket/: modeling_websocket.py
tutorials/websocket_tutorial/draw_cube_rust/: Cargo.toml
tutorials/websocket_tutorial/draw_cube_rust/src/: main.rs
(+16 files in other folders)
