[package]
name = "kittycad-modeling-api-examples"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.31"
image = "0.25.6"
kittycad = "0.3.36"
reqwest = "0.12"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
tokio-tungstenite = "0.26.2"
uuid = "1.16.0"
