[package]
name = "kittycad-modeling-api-examples"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.5"
futures = "0.3.31"
image = "0.25.8"
kittycad = "0.3.42"
reqwest = "0.12"
serde = "1.0.223"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tokio-tungstenite = "0.27.0"
uuid = "1.18.1"
